--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{8985AA1B-C879-466D-A0BF-CB3D0D405229}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Game3</RootNamespace>
-    <AssemblyName>Game3</AssemblyName>
+    <RootNamespace>CaseBreaker</RootNamespace>
+    <AssemblyName>CaseBreaker</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <MonoGamePlatform>Windows</MonoGamePlatform>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="Ball.cs" />
     <Compile Include="Brick.cs" />
-    <Compile Include="CassBreaker.cs" />
+    <Compile Include="CaseBreaker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Racket.cs" />
