--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Ball.cs" />
     <Compile Include="Brick.cs" />
+    <Compile Include="Pattern\Util.cs" />
     <Compile Include="SceneGameOver.cs" />
     <Compile Include="SceneWin.cs" />
     <Compile Include="ScenePause.cs" />
