--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Ball.cs" />
     <Compile Include="Brick.cs" />
+    <Compile Include="Pattern\IActor.cs" />
+    <Compile Include="Pattern\Sprite.cs" />
     <Compile Include="Pattern\Util.cs" />
     <Compile Include="SceneGameOver.cs" />
     <Compile Include="SceneWin.cs" />
@@ -65,6 +67,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\Bgd.jpg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Content\bricks.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\PlayOnly.png">
