--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -66,7 +66,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\Bgd.jpg">
+    <Content Include="Content\backgroundGame.jpg" />
+    <Content Include="Content\ball.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\bricks.png">
