--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -41,22 +41,23 @@
     <ApplicationManifest>app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Ball.cs" />
-    <Compile Include="Brick.cs" />
+    <Compile Include="Cores\Ball.cs" />
+    <Compile Include="Cores\Brick.cs" />
     <Compile Include="Pattern\IActor.cs" />
     <Compile Include="Pattern\Sprite.cs" />
     <Compile Include="Pattern\Util.cs" />
-    <Compile Include="SceneGameOver.cs" />
-    <Compile Include="SceneWin.cs" />
-    <Compile Include="ScenePause.cs" />
-    <Compile Include="SceneGameplay.cs" />
-    <Compile Include="SceneMainMenu.cs" />
+    <Compile Include="Scenes\SceneGameEditor.cs" />
+    <Compile Include="Scenes\SceneGameOver.cs" />
+    <Compile Include="Scenes\SceneWin.cs" />
+    <Compile Include="Scenes\ScenePause.cs" />
+    <Compile Include="Scenes\SceneGameplay.cs" />
+    <Compile Include="Scenes\SceneMainMenu.cs" />
     <Compile Include="MainGame.cs" />
     <Compile Include="Pattern\GameState.cs" />
     <Compile Include="Pattern\Scene.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Racket.cs" />
+    <Compile Include="Cores\Racket.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework">
@@ -87,6 +88,7 @@
     </MonoGameContentReference>
     <None Include="app.manifest" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
