Add Cell class to manage editor
Add Cell class to manage gridzone and draw the brick with the good texture according to it power

--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="Cores\Ball.cs" />
     <Compile Include="Cores\Brick.cs" />
+    <Compile Include="Cores\Cell.cs" />
     <Compile Include="Pattern\IActor.cs" />
     <Compile Include="Pattern\Sprite.cs" />
     <Compile Include="Pattern\Util.cs" />
