--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Cores\Brick.cs" />
     <Compile Include="Cores\Cell.cs" />
     <Compile Include="Pattern\IActor.cs" />
+    <Compile Include="Pattern\SaveEditor.cs" />
     <Compile Include="Pattern\Sprite.cs" />
     <Compile Include="Pattern\Util.cs" />
     <Compile Include="Scenes\SceneGameEditor.cs" />
@@ -65,6 +66,8 @@
       <HintPath>$(MonoGameInstallDirectory)\MonoGame\v3.0\Assemblies\Windows\MonoGame.Framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
