Add open and save file system
Finish the editor map with a save file and a open file to load our own map

--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Pattern\Util.cs" />
     <Compile Include="Scenes\SceneGameEditor.cs" />
     <Compile Include="Scenes\SceneGameOver.cs" />
+    <Compile Include="Scenes\SceneGameplayLoad.cs" />
     <Compile Include="Scenes\SceneWin.cs" />
     <Compile Include="Scenes\ScenePause.cs" />
     <Compile Include="Scenes\SceneGameplay.cs" />
