--- a/Game3/CaseBreaker.csproj
+++ b/Game3/CaseBreaker.csproj
@@ -95,8 +95,12 @@
   </ItemGroup>
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
+  <!--<Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />-->
+	<ItemGroup>
+		<PackageReference Include="MonoGame.Framework.{Platform}" Version="3.8.0" />
+		<PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0" />
+	</ItemGroup>
+	<!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
   </Target>
